testcases/valid/if.shp
class Main<p1> where
    p1: [Main<p1>]
{
    f1: i32;

    fn test() {
        if this.f1 == f1 {
            f1 = 0;
        } else {
            this.f1 = 5;
        }

        let x: i32;
        x = 5;
        if x != 4 {
            x = -2;
        }
    }
}
